Add select_action function

--- a/jupyter/categorical_dueling_double_dqn.ipynb
+++ b/jupyter/categorical_dueling_double_dqn.ipynb
@@ -10,12 +10,10 @@
    },
    "outputs": [],
    "source": [
-    "# built-in\n",
     "import random\n",
     "from collections import deque\n",
     "from copy import deepcopy\n",
     "\n",
-    "# tihrd party\n",
     "import gym\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -50,18 +48,15 @@
    },
    "outputs": [],
    "source": [
-    "# for C51\n",
-    "V_MAX = 10\n",
-    "V_MIN = -10\n",
-    "N_ATOMS = 51\n",
-    "DELTA_Z = (V_MAX - V_MIN) / (N_ATOMS - 1)\n",
-    "\n",
-    "# for learning\n",
     "SEED = 1\n",
     "BATCH_SIZE = 256\n",
     "GAMMA = 0.99\n",
     "LR = 0.03\n",
-    "EPS = 1e-8"
+    "EPS = 1e-8\n",
+    "V_MAX = 10\n",
+    "V_MIN = -10\n",
+    "N_ATOMS = 51\n",
+    "DELTA_Z = (V_MAX - V_MIN) / (N_ATOMS - 1)"
    ]
   },
   {
@@ -104,8 +99,8 @@
     "\n",
     "    def forward(self, x):\n",
     "        out = self.head(x)\n",
-    "        val_out = self.val(out).view(out.size(0), 1, N_ATOMS)\n",
-    "        adv_out = self.adv(out).view(out.size(0), -1, N_ATOMS)\n",
+    "        val_out = self.val(out).reshape(out.shape[0], 1, N_ATOMS)\n",
+    "        adv_out = self.adv(out).reshape(out.shape[0], -1, N_ATOMS)\n",
     "        adv_mean = adv_out.mean(dim=1, keepdim=True)\n",
     "        out = val_out + adv_out - adv_mean\n",
     "        out = self.log_softmax(out)\n",
@@ -165,19 +160,9 @@
     "\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
-    "        optimizer.step()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "FFhmC736lzHS"
-   },
-   "outputs": [],
-   "source": [
+    "        optimizer.step()\n",
+    "\n",
+    "\n",
     "def projection(next_p, rewards, dones):\n",
     "    proj_p = np.zeros((BATCH_SIZE, N_ATOMS), dtype=np.float32)\n",
     "    for atom in range(N_ATOMS):\n",
@@ -213,7 +198,20 @@
     "                proj_p[ne_dones, l] = (u - b)[ne_mask]\n",
     "                proj_p[ne_dones, u] = (b - l)[ne_mask]\n",
     "\n",
-    "    return proj_p"
+    "    return proj_p\n",
+    "\n",
+    "\n",
+    "def select_action(obs, tgt_net):\n",
+    "    tgt_net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        state = torch.tensor([obs]).to(device).float()\n",
+    "        probs = target_net(state)\n",
+    "        weights = probs * net.support\n",
+    "        q = weights.sum(dim=2)\n",
+    "        q_np = q.cpu().numpy()[0]\n",
+    "    action = np.argmax(q_np)\n",
+    "\n",
+    "    return action"
    ]
   },
   {
@@ -510,18 +508,11 @@
     "    done = False\n",
     "    ep_reward = 0\n",
     "    while not done:\n",
-    "#         env.render()\n",
+    "        env.render()\n",
     "        if np.random.rand() < epsilon:\n",
     "            action = env.action_space.sample()\n",
     "        else:\n",
-    "            target_net.eval()\n",
-    "            with torch.no_grad():\n",
-    "                state = torch.tensor([obs]).to(device).float()\n",
-    "                probs = target_net(state)\n",
-    "                weights = probs * net.support\n",
-    "                q = weights.sum(dim=2)\n",
-    "                q_np = q.cpu().numpy()[0]\n",
-    "                action = np.argmax(q_np)\n",
+    "            action = select_action(obs, target_net)\n",
     "\n",
     "        _obs, reward, done, _ = env.step(action)\n",
     "\n",
