--- a/jupyter/dqn.ipynb
+++ b/jupyter/dqn.ipynb
@@ -334,6 +334,8 @@
     "            if np.mean(reward_eval) >= env.spec.reward_threshold:\n",
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, total_steps))\n",
+    "                torch.save(target_net.state_dict(),\n",
+    "                           f'./test/{env.spec.id}_ep{i}_clear_model_dqn.pt')\n",
     "                break\n",
     "env.close()"
    ]
