--- a/jupyter/rnd/categorical_dueling_double_dqn_with_rnd.ipynb
+++ b/jupyter/rnd/categorical_dueling_double_dqn_with_rnd.ipynb
@@ -19,7 +19,6 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader"
    ]
   },
@@ -51,12 +50,15 @@
     "SEED = 1\n",
     "BATCH_SIZE = 256\n",
     "GAMMA = 0.99\n",
-    "LR = 0.03\n",
-    "EPS = 1e-8\n",
+    "LR_DQN = 0.3\n",
+    "LR_RND = 0.3\n",
+    "EPS = 1. / BATCH_SIZE\n",
     "V_MAX = 10.\n",
     "V_MIN = -10.\n",
     "N_ATOMS = 51\n",
     "DELTA_Z = (V_MAX - V_MIN) / (N_ATOMS - 1)\n",
+    "EX_COEF = 2.\n",
+    "IN_COEF = 1.\n",
     "\n",
     "# set device\n",
     "use_cuda = torch.cuda.is_available()\n",
@@ -117,7 +119,30 @@
     "        out = self.log_softmax(out)\n",
     "        probs = out.exp()\n",
     "\n",
-    "        return probs"
+    "        return probs\n",
+    "\n",
+    "\n",
+    "class FeatureNet(nn.Module):\n",
+    "    def __init__(self, obs_space):\n",
+    "        super().__init__()\n",
+    "        self.head = nn.Sequential(\n",
+    "            nn.Linear(obs_space, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 2)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.head(x)\n",
+    "        obs_feature = self.fc(out).reshape(out.shape[0], -1)\n",
+    "\n",
+    "        return obs_feature"
    ]
   },
   {
@@ -127,11 +152,17 @@
    "outputs": [],
    "source": [
     "losses = []\n",
+    "f_losses = []\n",
     "\n",
     "\n",
-    "def learn(net, tgt_net, optimizer, rep_memory):\n",
+    "def learn(net, tgt_net, pred_net, rand_net, net_optim, pred_optim, rep_memory):\n",
+    "    global mean\n",
+    "    global std\n",
+    "\n",
     "    net.train()\n",
     "    tgt_net.train()\n",
+    "    pred_net.train()\n",
+    "    rand_net.train()\n",
     "\n",
     "    train_data = []\n",
     "    train_data.extend(random.sample(rep_memory, BATCH_SIZE))\n",
@@ -140,23 +171,30 @@
     "                            batch_size=BATCH_SIZE,\n",
     "                            pin_memory=use_cuda)\n",
     "    # like a double DQN\n",
-    "    for i, (s, a, r, _s, d) in enumerate(dataloader):\n",
+    "    for i, (s, a, r, r_in, _s, d) in enumerate(dataloader):\n",
     "        s_batch = s.to(device).float()\n",
-    "        a_batch = a.detach().to(device).long()\n",
+    "        a_batch = a.to(device).long()\n",
     "        _s_batch = _s.to(device).float()\n",
-    "        r_batch = r.detach().to(device).float()\n",
-    "        is_done = 1. - d.detach().reshape(BATCH_SIZE, 1).to(device).float()\n",
+    "        _s_norm = normalize_obs(_s.detach().cpu().numpy(), mean, std)\n",
+    "        _s_norm_batch = torch.tensor(_s_norm).to(device).float()\n",
+    "        rewards = EX_COEF * r.detach().cpu().numpy().astype(np.longfloat) + \\\n",
+    "            IN_COEF * r_in.detach().cpu().numpy().astype(np.longfloat)\n",
+    "        dones = d.detach().cpu().numpy().astype(np.bool)\n",
     "\n",
+    "        pred_features = pred_net(_s_norm_batch)\n",
     "        _p_batch = net(_s_batch)\n",
     "        _weights = _p_batch * net.support\n",
     "        _q_batch = _weights.sum(dim=2)\n",
-    "        _a_batch = torch.argmax(_q_batch)\n",
+    "        _q_batch_np = _q_batch.detach().cpu().numpy()[0]\n",
+    "        _action_batch_np = np.argmax(_q_batch_np)\n",
     "\n",
     "        with torch.no_grad():\n",
-    "            _p_batch_tgt = tgt_net(_s_batch)\n",
-    "            _p_best = tgt_p_batch[range(BATCH_SIZE), _a_batch]\n",
+    "            rand_features = rand_net(_s_norm_batch)\n",
+    "            tgt_p_batch = tgt_net(_s_batch)\n",
+    "            _p_best = tgt_p_batch[range(BATCH_SIZE), _action_batch_np]\n",
+    "            _p_best_np = _p_best.cpu().numpy()\n",
     "\n",
-    "        proj_p = projection(_p_best, r_batch, is_done)\n",
+    "        proj_p_np = projection(_p_best_np, rewards, dones)\n",
     "        proj_p = torch.tensor(proj_p_np).to(device).float()\n",
     "\n",
     "        p_batch = net(s_batch)\n",
@@ -166,19 +204,26 @@
     "        eps = np.finfo(np.float32).eps.item()\n",
     "        loss = -(proj_p * (p_acting + eps).log()).sum(dim=1).mean()\n",
     "        losses.append(loss)\n",
+    "        f_loss = (pred_features - rand_features).pow(2).sum(dim=1).mean()\n",
+    "        f_losses.append(f_loss)\n",
     "\n",
-    "        optimizer.zero_grad()\n",
+    "        net_optim.zero_grad()\n",
     "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        net_optim.step()\n",
+    "        \n",
+    "        pred_optim.zero_grad()\n",
+    "        f_loss.backward()\n",
+    "        pred_optim.step()\n",
     "\n",
     "\n",
-    "def projection(_p_best, r_batch, is_done):\n",
-    "    proj_p = torch.zeros((BATCH_SIZE, N_ATOMS)).to(device).float()\n",
+    "def projection(next_p, rewards, dones):\n",
+    "    proj_p = np.zeros((BATCH_SIZE, N_ATOMS), dtype=np.float32)\n",
     "    for atom in range(N_ATOMS):\n",
-    "        z = torch.clamp(r_batch + GAMMA * (V_MIN + atom * DELTA_Z), V_MIN, V_MAX)\n",
+    "        z = np.minimum(V_MAX, np.maximum(\n",
+    "            V_MIN, rewards + (V_MIN + atom * DELTA_Z) * GAMMA))\n",
     "        b = (z - V_MIN) / DELTA_Z\n",
-    "        l = torch.floor(b)\n",
-    "        u = torch.ceil(b)\n",
+    "        l = np.floor(b).astype(np.int64)\n",
+    "        u = np.ceil(b).astype(np.int64)\n",
     "\n",
     "        eq_mask = u == l\n",
     "        proj_p[eq_mask, l[eq_mask]] += next_p[eq_mask, atom]\n",
@@ -207,6 +252,47 @@
     "                proj_p[ne_dones, u] = (b - l)[ne_mask]\n",
     "\n",
     "    return proj_p\n",
+    "\n",
+    "\n",
+    "def get_norm_params(obs_memory):\n",
+    "    global obs_space\n",
+    "\n",
+    "    obses = [[] for _ in range(obs_space)]\n",
+    "    for obs in obs_memory:\n",
+    "        for j in range(obs_space):\n",
+    "            obses[j].append(obs[j])\n",
+    "\n",
+    "    mean = np.zeros(obs_space, np.float32)\n",
+    "    std = np.zeros(obs_space, np.float32)\n",
+    "    for i, obs_ in enumerate(obses):\n",
+    "        mean[i] = np.mean(obs_)\n",
+    "        std[i] = np.std(obs_)\n",
+    "    return mean, std\n",
+    "\n",
+    "\n",
+    "def normalize_obs(obs, mean, std):\n",
+    "    means = [mean for _ in range(BATCH_SIZE)]\n",
+    "    stds = [std for _ in range(BATCH_SIZE)]\n",
+    "    mean = np.stack(means)\n",
+    "    std = np.stack(stds)\n",
+    "    norm_obs = (obs - mean) / std\n",
+    "\n",
+    "    return np.clip(norm_obs, -5, 5)\n",
+    "\n",
+    "\n",
+    "def calculate_reward_in(pred_net, rand_net, _obs):\n",
+    "    global mean\n",
+    "    global std\n",
+    "\n",
+    "    norm_obs = normalize_obs(_obs, mean, std)\n",
+    "    state = torch.tensor([norm_obs]).to(device).float()\n",
+    "    with torch.no_grad():\n",
+    "        pred_obs = pred_net(state)\n",
+    "        rand_obs = rand_net(state)\n",
+    "        reward = (pred_obs - rand_obs).pow(2).sum()\n",
+    "        clipped_reward = torch.clamp(reward, -1, 1)\n",
+    "\n",
+    "    return clipped_reward.item()\n",
     "\n",
     "\n",
     "def select_action(obs, tgt_net):\n",
@@ -269,10 +355,10 @@
     "learn_start = 1000\n",
     "memory_size = 10000\n",
     "update_frq = 1\n",
-    "use_eps_decay = True\n",
+    "use_eps_decay = False\n",
     "epsilon = 1.\n",
     "eps_min = 0.001\n",
-    "decay_rate = 0.0001\n",
+    "eps_decay = 0.0001\n",
     "n_eval = env.spec.trials\n",
     "\n",
     "# global values\n",
@@ -283,15 +369,19 @@
     "is_learned = False\n",
     "is_solved = False\n",
     "\n",
-    "# make two nerual networks\n",
+    "# make four nerual networks\n",
     "net = CategoricalDuelingDQN(obs_space, action_space, N_ATOMS).to(device)\n",
     "target_net = deepcopy(net)\n",
+    "pred_net = FeatureNet(obs_space).to(device)\n",
+    "rand_net = FeatureNet(obs_space).to(device)\n",
     "\n",
-    "# make a optimizer\n",
-    "optimizer = optim.Adam(net.parameters(), lr=LR, eps=EPS)\n",
+    "# make optimizer\n",
+    "net_optim = torch.optim.Adam(net.parameters(), lr=LR_DQN, eps=EPS)\n",
+    "pred_optim = torch.optim.Adam(pred_net.parameters(), lr=LR_RND, eps=EPS)\n",
     "\n",
     "# make memory\n",
-    "rep_memory = deque(maxlen=memory_size)"
+    "rep_memory = deque(maxlen=memory_size)\n",
+    "obs_memory = []"
    ]
   },
   {
@@ -361,6 +451,7 @@
     "    obs = env.reset()\n",
     "    done = False\n",
     "    ep_reward = 0\n",
+    "    ep_reward_in = 0.\n",
     "    while not done:\n",
     "        env.render()\n",
     "        if np.random.rand() < epsilon:\n",
@@ -369,12 +460,19 @@
     "            action = select_action(obs, target_net)\n",
     "\n",
     "        _obs, reward, done, _ = env.step(action)\n",
+    "        \n",
+    "        if not is_learned:\n",
+    "            obs_memory.append(obs)\n",
+    "            reward_in = 0.\n",
+    "        else:\n",
+    "            reward_in = calculate_reward_in(pred_net, rand_net, _obs)\n",
     "\n",
-    "        rep_memory.append((obs, action, reward, _obs, done))\n",
+    "        rep_memory.append((obs, action, reward, reward_in, _obs, done))\n",
     "\n",
     "        obs = _obs\n",
     "        total_steps += 1\n",
     "        ep_reward += reward\n",
+    "        ep_reward_in += reward_in\n",
     "        \n",
     "        if use_eps_decay:\n",
     "            epsilon -= epsilon * decay_rate\n",
@@ -382,8 +480,13 @@
     "\n",
     "        if len(rep_memory) >= learn_start:\n",
     "            if len(rep_memory) == learn_start:\n",
-    "                print('\\n============  Start Learning  ============\\n')\n",
-    "            learn(net, target_net, optimizer, rep_memory)\n",
+    "                print('\\n====================  Start Learning  ====================\\n')\n",
+    "                is_learned = True\n",
+    "                mean, std = get_norm_params(obs_memory)\n",
+    "                obs_memory.clear()\n",
+    "                \n",
+    "            learn(net, target_net, pred_net, rand_net,\n",
+    "                  net_optim, pred_optim, rep_memory)\n",
     "            learn_steps += 1\n",
     "\n",
     "        if learn_steps == update_frq:\n",
@@ -392,15 +495,15 @@
     "    if done:\n",
     "        rewards.append(ep_reward)\n",
     "        reward_eval.append(ep_reward)\n",
-    "        print('{:3} Episode in {:5} steps, reward {:.2f}'.format(\n",
-    "            i, total_steps, ep_reward))\n",
+    "        print('{:3} Episode in {:5} steps, reward {:.2f}, reward_in {:.2f}'.format(\n",
+    "            i, total_steps, ep_reward, ep_reward_in))\n",
     "\n",
     "        if len(reward_eval) >= n_eval:\n",
     "            if np.mean(reward_eval) >= env.spec.reward_threshold:\n",
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, total_steps))\n",
     "                torch.save(target_net.state_dict(),\n",
-    "                           f'./test/{env.spec.id}_ep{i}_clear_model_cdddqn.pt')\n",
+    "                           f'../test/{env.spec.id}_ep{i}_clear_model_cdddqn_r.pt')\n",
     "                break\n",
     "env.close()"
    ]
@@ -419,6 +522,10 @@
     "plt.figure(figsize=(15, 5))\n",
     "plt.title('loss')\n",
     "plt.plot(losses)\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.title('f_loss')\n",
+    "plt.plot(f_losses)\n",
     "plt.show()"
    ]
   }
