--- a/jupyter/rand_net_distill/dueling_double_dqn_with_rnd.ipynb
+++ b/jupyter/rand_net_distill/dueling_double_dqn_with_rnd.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader"
    ]
   },
@@ -49,16 +50,13 @@
    "source": [
     "SEED = 1\n",
     "BATCH_SIZE = 256\n",
-    "GAMMA = 0.99\n",
-    "LR_DQN = 0.3\n",
-    "LR_RND = 0.3\n",
-    "EPS = 1. / BATCH_SIZE\n",
-    "V_MAX = 10.\n",
-    "V_MIN = -10.\n",
-    "N_ATOMS = 51\n",
-    "DELTA_Z = (V_MAX - V_MIN) / (N_ATOMS - 1)\n",
+    "LR_DQN = 0.0003\n",
+    "LR_RND = 0.0003\n",
+    "UP_COEF = 0.5\n",
     "EX_COEF = 2.\n",
     "IN_COEF = 1.\n",
+    "GAMMA = 0.99\n",
+    "EPS = 1e-8\n",
     "\n",
     "# set device\n",
     "use_cuda = torch.cuda.is_available()\n",
@@ -82,8 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "class CategoricalDuelingDQN(nn.Module):\n",
-    "    def __init__(self, obs_space, action_space, n_atoms):\n",
+    "class DuelingDQN(nn.Module):\n",
+    "    def __init__(self, obs_space, action_space):\n",
     "        super().__init__()\n",
     "\n",
     "        self.head = nn.Sequential(\n",
@@ -96,46 +94,39 @@
     "        self.val = nn.Sequential(\n",
     "            nn.Linear(256, 256),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(256, n_atoms)\n",
+    "            nn.Linear(256, 1)\n",
     "        )\n",
     "\n",
     "        self.adv = nn.Sequential(\n",
     "            nn.Linear(256, 256),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(256, action_space * n_atoms)\n",
+    "            nn.Linear(256, action_space)\n",
     "        )\n",
-    "\n",
-    "        self.log_softmax = nn.LogSoftmax(dim=-1)\n",
-    "\n",
-    "        self.register_buffer(\n",
-    "            'support', torch.arange(V_MIN, V_MAX + DELTA_Z, DELTA_Z))\n",
     "\n",
     "    def forward(self, x):\n",
     "        out = self.head(x)\n",
-    "        val_out = self.val(out).reshape(out.shape[0], 1, N_ATOMS)\n",
-    "        adv_out = self.adv(out).reshape(out.shape[0], -1, N_ATOMS)\n",
+    "        val_out = self.val(out).reshape(out.shape[0], 1)\n",
+    "        adv_out = self.adv(out).reshape(out.shape[0], -1)\n",
     "        adv_mean = adv_out.mean(dim=1, keepdim=True)\n",
-    "        out = val_out + adv_out - adv_mean\n",
-    "        out = self.log_softmax(out)\n",
-    "        probs = out.exp()\n",
+    "        q = val_out + adv_out - adv_mean\n",
     "\n",
-    "        return probs\n",
+    "        return q\n",
     "\n",
     "\n",
     "class FeatureNet(nn.Module):\n",
     "    def __init__(self, obs_space):\n",
     "        super().__init__()\n",
     "        self.head = nn.Sequential(\n",
-    "            nn.Linear(obs_space, 512),\n",
+    "            nn.Linear(obs_space, 256),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 512),\n",
+    "            nn.Linear(256, 256),\n",
     "            nn.ReLU()\n",
     "        )\n",
     "\n",
     "        self.fc = nn.Sequential(\n",
-    "            nn.Linear(512, 512),\n",
+    "            nn.Linear(256, 256),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 2)\n",
+    "            nn.Linear(256, 2)\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -167,95 +158,69 @@
     "    train_data = []\n",
     "    train_data.extend(random.sample(rep_memory, BATCH_SIZE))\n",
     "\n",
-    "    dataloader = DataLoader(train_data,\n",
-    "                            batch_size=BATCH_SIZE,\n",
-    "                            pin_memory=use_cuda)\n",
-    "    # like a double DQN\n",
-    "    for i, (s, a, r, r_in, _s, d) in enumerate(dataloader):\n",
+    "    dataloader = DataLoader(\n",
+    "        train_data,\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        pin_memory=use_cuda\n",
+    "    )\n",
+    "\n",
+    "    # double DQN\n",
+    "    for i, (s, a, r_ex, r_in, _s, d) in enumerate(dataloader):\n",
     "        s_batch = s.to(device).float()\n",
-    "        a_batch = a.to(device).long()\n",
+    "        a_batch = a.detach().to(device).long()\n",
     "        _s_batch = _s.to(device).float()\n",
+    "\n",
     "        _s_norm = normalize_obs(_s.detach().cpu().numpy(), mean, std)\n",
     "        _s_norm_batch = torch.tensor(_s_norm).to(device).float()\n",
-    "        rewards = EX_COEF * r.detach().cpu().numpy().astype(np.longfloat) + \\\n",
-    "            IN_COEF * r_in.detach().cpu().numpy().astype(np.longfloat)\n",
-    "        dones = d.detach().cpu().numpy().astype(np.bool)\n",
+    "        r_ex_batch = r_ex.detach().to(device).float()\n",
+    "        r_in_batch = r_in.detach().to(device).float()\n",
+    "        r_batch = EX_COEF * r_ex_batch + IN_COEF * r_in_batch\n",
+    "        is_done = 1. - d.detach().reshape(BATCH_SIZE, 1).to(device).float()\n",
     "\n",
+    "        _q_batch = net(_s_batch)\n",
+    "        _a_batch = torch.argmax(_q_batch, dim=1)\n",
     "        pred_features = pred_net(_s_norm_batch)\n",
-    "        _p_batch = net(_s_batch)\n",
-    "        _weights = _p_batch * net.support\n",
-    "        _q_batch = _weights.sum(dim=2)\n",
-    "        _q_batch_np = _q_batch.detach().cpu().numpy()[0]\n",
-    "        _action_batch_np = np.argmax(_q_batch_np)\n",
     "\n",
     "        with torch.no_grad():\n",
+    "            _q_batch_tgt = tgt_net(_s_batch)\n",
+    "            action_space = _q_batch_tgt.shape[1]\n",
+    "            done_mask = torch.cat(\n",
+    "                tuple(is_done for _ in range(action_space)), dim=1)\n",
+    "            _q_batch_tgt_masked = _q_batch_tgt * done_mask\n",
+    "            _q_best_tgt = _q_batch_tgt_masked[range(BATCH_SIZE), _a_batch]\n",
     "            rand_features = rand_net(_s_norm_batch)\n",
-    "            tgt_p_batch = tgt_net(_s_batch)\n",
-    "            _p_best = tgt_p_batch[range(BATCH_SIZE), _action_batch_np]\n",
-    "            _p_best_np = _p_best.cpu().numpy()\n",
     "\n",
-    "        proj_p_np = projection(_p_best_np, rewards, dones)\n",
-    "        proj_p = torch.tensor(proj_p_np).to(device).float()\n",
-    "\n",
-    "        p_batch = net(s_batch)\n",
-    "        p_acting = p_batch[range(BATCH_SIZE), a_batch.data]\n",
+    "        q_batch = net(s_batch)\n",
+    "        q_acting = q_batch[range(BATCH_SIZE), a_batch]\n",
     "\n",
     "        # loss\n",
-    "        eps = np.finfo(np.float32).eps.item()\n",
-    "        loss = -(proj_p * (p_acting + eps).log()).sum(dim=1).mean()\n",
+    "        loss = ((r_batch + GAMMA*_q_best_tgt) - q_acting).pow(2).sum().mean()\n",
     "        losses.append(loss)\n",
+    "\n",
     "        f_loss = (pred_features - rand_features).pow(2).sum(dim=1).mean()\n",
     "        f_losses.append(f_loss)\n",
     "\n",
     "        net_optim.zero_grad()\n",
     "        loss.backward()\n",
     "        net_optim.step()\n",
-    "        \n",
+    "\n",
     "        pred_optim.zero_grad()\n",
     "        f_loss.backward()\n",
     "        pred_optim.step()\n",
     "\n",
     "\n",
-    "def projection(next_p, rewards, dones):\n",
-    "    proj_p = np.zeros((BATCH_SIZE, N_ATOMS), dtype=np.float32)\n",
-    "    for atom in range(N_ATOMS):\n",
-    "        z = np.minimum(V_MAX, np.maximum(\n",
-    "            V_MIN, rewards + (V_MIN + atom * DELTA_Z) * GAMMA))\n",
-    "        b = (z - V_MIN) / DELTA_Z\n",
-    "        l = np.floor(b).astype(np.int64)\n",
-    "        u = np.ceil(b).astype(np.int64)\n",
+    "def select_action(obs, tgt_net):\n",
+    "    tgt_net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        state = torch.tensor([obs]).to(device).float()\n",
+    "        q = target_net(state)\n",
+    "        action = torch.argmax(q)\n",
     "\n",
-    "        eq_mask = u == l\n",
-    "        proj_p[eq_mask, l[eq_mask]] += next_p[eq_mask, atom]\n",
-    "        ne_mask = u != l\n",
-    "        proj_p[ne_mask, l[ne_mask]] += next_p[ne_mask, atom] * (u - b)[ne_mask]\n",
-    "        proj_p[ne_mask, u[ne_mask]] += next_p[ne_mask, atom] * (b - l)[ne_mask]\n",
-    "\n",
-    "        if dones.any():\n",
-    "            proj_p[dones] = 0.0\n",
-    "            z = np.minimum(V_MAX, np.maximum(V_MIN, rewards[dones]))\n",
-    "            b = (z - V_MIN) / DELTA_Z\n",
-    "            l = np.floor(b).astype(np.int64)\n",
-    "            u = np.ceil(b).astype(np.int64)\n",
-    "\n",
-    "            eq_mask = u == l\n",
-    "            eq_dones = dones.copy()\n",
-    "            eq_dones[dones] = eq_mask\n",
-    "            if eq_dones.any():\n",
-    "                proj_p[eq_dones, l] = 1.0\n",
-    "\n",
-    "            ne_mask = u != l\n",
-    "            ne_dones = dones.copy()\n",
-    "            ne_dones[dones] = ne_mask\n",
-    "            if ne_dones.any():\n",
-    "                proj_p[ne_dones, l] = (u - b)[ne_mask]\n",
-    "                proj_p[ne_dones, u] = (b - l)[ne_mask]\n",
-    "\n",
-    "    return proj_p\n",
+    "    return action.item()\n",
     "\n",
     "\n",
     "def get_norm_params(obs_memory):\n",
-    "    global obs_space\n",
+    "    global obs_apace\n",
     "\n",
     "    obses = [[] for _ in range(obs_space)]\n",
     "    for obs in obs_memory:\n",
@@ -280,11 +245,11 @@
     "    return np.clip(norm_obs, -5, 5)\n",
     "\n",
     "\n",
-    "def calculate_reward_in(pred_net, rand_net, _obs):\n",
+    "def calculate_reward_in(pred_net, rand_net, obs):\n",
     "    global mean\n",
     "    global std\n",
     "\n",
-    "    norm_obs = normalize_obs(_obs, mean, std)\n",
+    "    norm_obs = normalize_obs(obs, mean, std)\n",
     "    state = torch.tensor([norm_obs]).to(device).float()\n",
     "    with torch.no_grad():\n",
     "        pred_obs = pred_net(state)\n",
@@ -292,19 +257,7 @@
     "        reward = (pred_obs - rand_obs).pow(2).sum()\n",
     "        clipped_reward = torch.clamp(reward, -1, 1)\n",
     "\n",
-    "    return clipped_reward.item()\n",
-    "\n",
-    "\n",
-    "def select_action(obs, tgt_net):\n",
-    "    tgt_net.eval()\n",
-    "    with torch.no_grad():\n",
-    "        state = torch.tensor([obs]).to(device).float()\n",
-    "        probs = target_net(state)\n",
-    "        weights = probs * net.support\n",
-    "        q = weights.sum(dim=2)\n",
-    "        action = torch.argmax(q)\n",
-    "\n",
-    "    return action.item()"
+    "    return clipped_reward.item()"
    ]
   },
   {
@@ -341,10 +294,10 @@
    "outputs": [],
    "source": [
     "# make an environment\n",
-    "env = gym.make('CartPole-v0')\n",
+    "# env = gym.make('CartPole-v0')\n",
     "# env = gym.make('CartPole-v1')\n",
     "# env = gym.make('MountainCar-v0')\n",
-    "# env = gym.make('LunarLander-v2')\n",
+    "env = gym.make('LunarLander-v2')\n",
     "\n",
     "env.seed(SEED)\n",
     "obs_space = env.observation_space.shape[0]\n",
@@ -352,13 +305,13 @@
     "\n",
     "# hyperparameter\n",
     "n_episodes = 1000\n",
-    "learn_start = 1000\n",
-    "memory_size = 10000\n",
+    "learn_start = 1500\n",
+    "memory_size = 50000\n",
     "update_frq = 1\n",
     "use_eps_decay = False\n",
-    "epsilon = 1.\n",
+    "epsilon = 0.001\n",
     "eps_min = 0.001\n",
-    "eps_decay = 0.0001\n",
+    "decay_rate = 0.0001\n",
     "n_eval = env.spec.trials\n",
     "\n",
     "# global values\n",
@@ -370,7 +323,7 @@
     "is_solved = False\n",
     "\n",
     "# make four nerual networks\n",
-    "net = CategoricalDuelingDQN(obs_space, action_space, N_ATOMS).to(device)\n",
+    "net = DuelingDQN(obs_space, action_space).to(device)\n",
     "target_net = deepcopy(net)\n",
     "pred_net = FeatureNet(obs_space).to(device)\n",
     "rand_net = FeatureNet(obs_space).to(device)\n",
@@ -490,7 +443,9 @@
     "            learn_steps += 1\n",
     "\n",
     "        if learn_steps == update_frq:\n",
-    "            target_net.load_state_dict(net.state_dict())\n",
+    "            # target smoothing update\n",
+    "            for t, n in zip(target_net.parameters(), net.parameters()):\n",
+    "                t.data = UP_COEF * n.data + (1 - UP_COEF) * t.data\n",
     "            learn_steps = 0\n",
     "    if done:\n",
     "        rewards.append(ep_reward)\n",
@@ -503,7 +458,7 @@
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, total_steps))\n",
     "                torch.save(target_net.state_dict(),\n",
-    "                           f'../test/{env.spec.id}_ep{i}_clear_model_cdddqn_r.pt')\n",
+    "                           f'../test/saved_models/{env.spec.id}_ep{i}_clear_model_dddqn_r.pt')\n",
     "                break\n",
     "env.close()"
    ]
@@ -517,17 +472,38 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('reward')\n",
+    "plt.title('Reward')\n",
     "plt.plot(rewards)\n",
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('loss')\n",
+    "plt.title('Loss')\n",
     "plt.plot(losses)\n",
     "plt.show()\n",
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('f_loss')\n",
-    "plt.plot(f_losses)\n",
+    "plt.title('f_Loss')\n",
+    "plt.plot(f_losses[30:])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\n",
+    "    ('CartPole-v0', 355, 0.5),\n",
+    "    ('CartPole-v1', 484, 0.025),\n",
+    "    ('MountainCar-v0', 245, 0.05),\n",
+    "    ('LunarLander-v2', 454, 0.5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
