--- a/jupyter/categorical_dueling_double_dqn.ipynb
+++ b/jupyter/categorical_dueling_double_dqn.ipynb
@@ -375,7 +375,7 @@
     "        obs = _obs\n",
     "        total_steps += 1\n",
     "        ep_reward += reward\n",
-    "        \n",
+    "\n",
     "        if use_eps_decay:\n",
     "            epsilon -= epsilon * decay_rate\n",
     "            epsilon = max(eps_min, epsilon)\n",
@@ -400,7 +400,7 @@
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, total_steps))\n",
     "                torch.save(target_net.state_dict(),\n",
-    "                           f'./test/{env.spec.id}_ep{i}_clear_model_cdddqn.pt')\n",
+    "                           f'./test/saved_models/{env.spec.id}_ep{i}_clear_model_cdddqn.pt')\n",
     "                break\n",
     "env.close()"
    ]
@@ -414,10 +414,10 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('reward')\n",
+    "plt.title('Reward')\n",
     "plt.plot(rewards)\n",
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('loss')\n",
+    "plt.title('Loss')\n",
     "plt.plot(losses)\n",
     "plt.show()"
    ]
