--- a/jupyter/dqn.ipynb
+++ b/jupyter/dqn.ipynb
@@ -335,7 +335,7 @@
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, total_steps))\n",
     "                torch.save(target_net.state_dict(),\n",
-    "                           f'./test/{env.spec.id}_ep{i}_clear_model_dqn.pt')\n",
+    "                           f'./test/saved_models/{env.spec.id}_ep{i}_clear_model_dqn.pt')\n",
     "                break\n",
     "env.close()"
    ]
@@ -349,10 +349,10 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('reward')\n",
+    "plt.title('Reward')\n",
     "plt.plot(rewards)\n",
     "plt.figure(figsize=(15, 5))\n",
-    "plt.title('loss')\n",
+    "plt.title('Loss')\n",
     "plt.plot(losses)\n",
     "plt.show()"
    ]
