--- a/notebook/categorical_dqn.ipynb
+++ b/notebook/categorical_dqn.ipynb
@@ -137,12 +137,12 @@
     "        a_batch = a.detach().to(device).long()\n",
     "        _s_batch = _s.to(device).float()\n",
     "        r_batch = r.detach().to(device).float()\n",
-    "        is_done = 1. - d.detach().to(device).float()\n",
+    "        done_mask = 1 - d.detach().to(device).float()\n",
     "\n",
     "        with torch.no_grad():\n",
     "            _p_batch_tgt = tgt_net(_s_batch)\n",
     "            _p_acting = _p_batch_tgt[range(BATCH_SIZE), a_batch]\n",
-    "        _p_proj = projection(_p_acting, r_batch, is_done)\n",
+    "        _p_proj = projection(_p_acting, r_batch, done_mask)\n",
     "\n",
     "        p_batch = net(s_batch)\n",
     "        p_acting = p_batch[range(BATCH_SIZE), a_batch.data]\n",
@@ -156,14 +156,14 @@
     "        optimizer.step()\n",
     "\n",
     "\n",
-    "def projection(_p_acting, r_batch, is_done):\n",
+    "def projection(_p_acting, r_batch, done_mask):\n",
     "    _p_proj = np.zeros((BATCH_SIZE, N_ATOMS), dtype=np.float32)\n",
     "    r_batch_np = r_batch.cpu().numpy()\n",
-    "    is_done_np = is_done.cpu().numpy()\n",
+    "    done_mask_np = done_mask.cpu().numpy()\n",
     "    _p_acting_np = _p_acting.detach().cpu().numpy()\n",
     "    batch_id = range(BATCH_SIZE)\n",
     "    for i in range(N_ATOMS):\n",
-    "        z = np.clip(r_batch_np + GAMMA * (V_MIN + i * DELTA_Z) * is_done_np,\n",
+    "        z = np.clip(r_batch_np + GAMMA * done_mask_np * (V_MIN + i * DELTA_Z),\n",
     "                    V_MIN, V_MAX)\n",
     "        b = (z - V_MIN) / DELTA_Z\n",
     "        l = np.floor(b).astype(np.int64)\n",
