--- a/notebook/dqn.ipynb
+++ b/notebook/dqn.ipynb
@@ -124,19 +124,17 @@
     "        a_batch = a.detach().to(device).long()\n",
     "        _s_batch = _s.to(device).float()\n",
     "        r_batch = r.detach().to(device).float()\n",
-    "        is_done = 1. - d.detach().reshape(BATCH_SIZE, 1).to(device).float()\n",
+    "        done_mask = 1 - d.detach().to(device).float()\n",
     "\n",
     "        with torch.no_grad():\n",
     "            _q_batch_tgt = tgt_net(_s_batch)\n",
-    "            done_mask = torch.cat(tuple(is_done for _ in range(action_space)), dim=1)\n",
-    "            _q_batch_tgt_masked = _q_batch_tgt * done_mask\n",
-    "            _q_acting_tgt = _q_batch_tgt_masked[range(BATCH_SIZE), a_batch]\n",
+    "            _q_acting_tgt = _q_batch_tgt[range(BATCH_SIZE), a_batch]\n",
     "\n",
     "        q_batch = net(s_batch)\n",
     "        q_acting = q_batch[range(BATCH_SIZE), a_batch]\n",
     "\n",
     "        # loss\n",
-    "        loss = ((r_batch + GAMMA*_q_acting_tgt) - q_acting).pow(2).mean()\n",
+    "        loss = ((r_batch + GAMMA * done_mask * _q_acting_tgt) - q_acting).pow(2).mean()\n",
     "        losses.append(loss)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -751,7 +749,7 @@
     {
      "data": {
       "text/plain": [
-       "[('CartPole-v0', 296, 0.25),\n",
+       "[('CartPole-v0', 299, 0.25),\n",
        " ('CartPole-v1', 413, 0.025),\n",
        " ('MountainCar-v0', None, 0.05)]"
       ]
