--- a/notebook/categorical_dueling_double_dqn.ipynb
+++ b/notebook/categorical_dueling_double_dqn.ipynb
@@ -49,8 +49,8 @@
    "outputs": [],
    "source": [
     "SEED = 1\n",
-    "BATCH_SIZE = 256\n",
-    "LR = 0.0003\n",
+    "BATCH_SIZE = 128\n",
+    "LR = 0.00025\n",
     "UP_COEF = 0.05\n",
     "GAMMA = 0.99\n",
     "EPS = 1.1920929e-07\n",
@@ -133,10 +133,9 @@
     "        adv_out = self.adv(out).reshape(out.shape[0], -1, N_ATOMS)\n",
     "        adv_mean = adv_out.mean(dim=1, keepdim=True)\n",
     "        out = val_out + adv_out - adv_mean\n",
-    "        out = self.log_softmax(out)\n",
-    "        probs = out.exp()\n",
+    "        logp = self.log_softmax(out)\n",
     "\n",
-    "        return probs"
+    "        return log_p.exp()"
    ]
   },
   {
@@ -161,13 +160,13 @@
     "        if i > 0:\n",
     "            break\n",
     "        s_batch = s.to(device).float()\n",
-    "        a_batch = a.detach().to(device).long()\n",
+    "        a_batch = a.to(device).long()\n",
     "        _s_batch = _s.to(device).float()\n",
-    "        r_batch = r.detach().to(device).float()\n",
-    "        done_mask = 1 - d.detach().to(device).float()\n",
+    "        r_batch = r.to(device).float()\n",
+    "        done_mask = 1. - d.to(device).float()\n",
     "\n",
     "        _p_batch = net(_s_batch)\n",
-    "        _weights = _p_batch * net.support\n",
+    "        _weights = _log_p_batch.exp() * net.support\n",
     "        _q_batch = _weights.sum(dim=2)\n",
     "        _a_batch = torch.argmax(_q_batch, dim=1)\n",
     "\n",
@@ -180,8 +179,7 @@
     "        p_acting = p_batch[range(BATCH_SIZE), a_batch.data]\n",
     "\n",
     "        # loss\n",
-    "        loss = -(_p_proj * torch.clamp(p_acting, min=EPS).log()).sum(dim=1).mean()\n",
-    "#         loss = -(_p_proj * (p_acting + EPS).log()).sum(dim=1).mean()\n",
+    "        loss = -(_p_proj * p_acting.clamp(min=EPS).log()).sum(dim=1).mean()\n",
     "        losses.append(loss)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -206,9 +204,7 @@
     "        \n",
     "        _p_proj[batch_id, l[batch_id]] += _p_best_np[batch_id, i] * (u - b)[batch_id]\n",
     "        _p_proj[batch_id, u[batch_id]] += _p_best_np[batch_id, i] * (b - l)[batch_id]\n",
-    "        \n",
-    "#     _p_proj = np.clip(_p_proj, EPS, None)\n",
-    "#     _p_proj = _p_proj / _p_proj.sum(axis=1, keepdims=1)\n",
+    "\n",
     "    return torch.tensor(_p_proj).to(device).float()\n",
     "\n",
     "\n",
@@ -216,8 +212,8 @@
     "    tgt_net.eval()\n",
     "    with torch.no_grad():\n",
     "        state = torch.tensor([obs]).to(device).float()\n",
-    "        probs = target_net(state)\n",
-    "        weights = probs * net.support\n",
+    "        log_p = target_net(state)\n",
+    "        weights = log_p.exp() * net.support\n",
     "        q = weights.sum(dim=2)\n",
     "        action = torch.argmax(q, dim=1)\n",
     "\n",
@@ -291,7 +287,7 @@
     "target_net = deepcopy(net)\n",
     "\n",
     "# make a optimizer\n",
-    "optimizer = optim.Adam(net.parameters(), lr=LR, eps=EPS)\n",
+    "optimizer = optim.Adam(net.parameters(), lr=LR, eps=0.01/BATCH_SIZE)\n",
     "\n",
     "# make memory\n",
     "rep_memory = deque(maxlen=memory_size)"
